--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "happy-land.github.io/burger-gh-pages",
+  "homepage": "https://happy-land.github.io/burger-gh-pages",
   "name": "burger-gh-pages",
   "version": "0.1.0",
   "private": true,
